--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.2",
+    "@monaco-editor/react": "^4.6.0",
     "convex": "^1.19.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
