--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/nextjs": "^6.11.2",
     "@monaco-editor/react": "^4.6.0",
     "convex": "^1.19.1",
+    "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
