--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.3",
     "svix": "^1.45.1",
     "zustand": "^5.0.3"
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
